Wed Jun 06 16:51:34 2001  George Lebl <jirka@5z.com>

	* config/XKeepsCrashing, daemon/gdm.c: try gdialog if we can't find
	  standard dialog, that might work as well.

Wed Jun 06 06:03:41 2001  George Lebl <jirka@5z.com>

	* Makefile.am: add -f to mv

Wed Jun 06 00:59:33 2001  George Lebl <jirka@5z.com>

	* configure.in, gui/Makefile.am: do the conditional chooser build
	  in a kosher way that actually works

Wed Jun 06 00:41:23 2001  George Lebl <jirka@5z.com>

	* configure.in, gui/Makefile.am: when compiling without xdmcp
	  don't compile the chooser

	* gui/Makefile.am, gui/gdmchooser.c: Use gdmwm for window management
	  and query xinerama as well.  Also do manage on doubleclick

	* daemon/choose.c, daemon/xdmcp.c: Some obvious fixes, note that
	  indirect lookup will NOT return an expired Indirect thingie. 
	  Still need to figure out where does the chooser plug in.

	* gui/gdmlogin.c, gui/gdmchooser.c: run gdmwm only when not debugging

	* daemon/slave.c, daemon/gdm.c, daemon/errorgui.[ch],
	  daemon/Makefile.am:  Deal with the hanging bugs by doing an exec
	  before running the gtk gui.  Also make the gui use GNOME to be
	  prettier.  I'm less and less sure I like this hack and it might
	  move into a separate binary, though this way it is faster as
	  gdm is already paged in.  This also fixes some i18n problems
	  with the error dialog.

Tue Jun 05 21:27:52 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c: fix hanging related to centering of dialogs.

Mon Jun 04 20:45:54 2001  George Lebl <jirka@5z.com>

	* Makefile.am, configure.in, gdmconfig-security(.in), gdm.spec.in:
	  cleaned up the pam stuff ala gnome-utils

	* configure.in, accconfig.h, daemon/xdmcp.[ch], daemon/gdm.c,
	  gui/gdmconfig.(c|glade): Detect the xdmcp libs and compile
	  without xdmcp support if not found and allow selecting this
	  option ala the xinerama one.  The configurator will disable
	  the xdmcp options if they aren't compiled in
