@@ -1,3 +1,10 @@
+Sun Jun 10 17:13:47 2001  George Lebl <jirka@5z.com>
+
+	* configure.in: fix CONSOLE_HELPER test
+
+	* gui/gdmwm.c: follow the motif deco hint a bit, and do better job of
+	  placement, and also do a hack to correctly place gkrellm.
+
 Wed Jun 06 16:51:34 2001  George Lebl <jirka@5z.com>
 
 	* config/XKeepsCrashing, daemon/gdm.c: try gdialog if we can't find
